# ECS

./: .gitignore  CMakeLists.txt  CODEX_ONBOARDING.md  CONVENTIONS.md  FieldServer.vcxproj  FieldServer.vcxproj.filters  GameServerSkeleton.sln  PROJECT_OVERVIEW.md  _build.bat  build.bat  build.py  interaction-map.yaml  stress_test.py  test_all_sessions.py  test_echo.py  test_multi_agent_comms.py  test_session1.py  test_session10.py  test_session11.py  test_session12.py  test_session13.py  test_session14.py  test_session15.py  test_session16.py  test_session17.py  test_session18.py  test_session19.py  test_session2.py  test_session20.py  test_session21.py  test_session22.py  test_session23.py  test_session24.py  test_session25.py  test_session26.py  test_session27.py  test_session28.py  test_session29.py  test_session3.py  test_session30_chat.py  (+16 more)
BotSystem/: __init__.py  behavior_tree.py  bot_behaviors.py  bot_client.py  bot_manager.py
Components/: BossComponents.h  BuffComponents.h  ChannelComponents.h  ChatComponents.h  CombatComponents.h  GameComponents.h  GhostComponents.h  InstanceComponents.h  InventoryComponents.h  LoginComponents.h  LootComponents.h  MANIFEST.yaml  MatchComponents.h  MonsterComponents.h  NetworkComponents.h  PacketComponents.h  PartyComponents.h  QuestComponents.h  ShopComponents.h  SkillComponents.h  SpatialComponents.h  StatsComponents.h  TimerComponents.h  ZoneComponents.h
Core/: Component.h  ConditionEngine.h  ConfigLoader.h  Entity.h  EventBus.h  GameConfig.h  MANIFEST.yaml  Serializer.h  System.h  World.cpp  World.h
Servers/: CLAUDE.md
(+433 files in other folders)
